# fisticuffs-hs

./: .gitattributes  CHANGELOG.md  fisticuffs.cabal
app/: Main.hs
src/: Fisticuffs.hs  MyLib.hs
