cabal-version:   3.0
name:            fisticuffs
version:         0.1.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      matt@hunzinger.me
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        containers,
        sdl2,
        sdl2-image,
        mtl

executable fisticuffs
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        fisticuffs

test-suite fisticuffs-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        fisticuffs
